[package]
name = "resource-proxy-pingora"
version = "0.1.1"
authors = ["Wang Wei"]
repository = "https://github.com/thegenius/resource-proxy-pingora"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["static", "static-files", "http", "pingora"]
exclude = ["testdata/"]
license = "Apache-2.0"
edition = "2021"
description = """
A Pingora module for serving static files
"""

[lib]
name = "resource_proxy_pingora"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.42"
bytes = "1.0"
clap = {version = "4.5", features = ["derive"]}
http = "1.0"
httpdate = "1"
log = "0.4"
glob = "0.3.1"
mime_guess = { version = "2.0.4", default-features = false }
#pandora-module-utils = "0.2.0"
percent-encoding = "2.1"
serde = {version = "1.0", features = ["derive"]}
once_cell = "1.19.0"
pingora = { version = "0.3", features = ["proxy"] }
pingora-core = { version = "0.3.0" }
serde_yaml = "0.8.26"
maud = "0.26.0"

[dev-dependencies]
#compression-module = "0.2.0"
const_format = "0.2.32"
env_logger = "0.9"
#rewrite-module = "0.2"
#startup-module = "0.2"
test-log = "0.2.13"
tokio = "1.0"

